# VScode

./: CMakeLists.txt  Filtered_Female_List.xlsx  Makefile  README.md  build.bat
.ven/: pyvenv.cfg
C/: INDE.C
CPP/: Loop2.cpp  Untitled-1.ipynb  a.cpp  ap.cpp  day4.cpp  day5.cpp  day6.cpp  day9.cpp  day_10.cpp  functions.cpp  llm.cpp  loop.cpp  loop1.cpp  primeno.cpp  tb.cpp  tempCodeRunnerFile.cpp  tempcode.cpp
Cursor/HTML/: index.css  index.html  new.html  script.js
HTML/: index.css  index.html  script.js  view-page-source.com-ieb2sldrrr.preview.dora.run__page=P6GjYRCKp&amp;amp;project=1643863&amp;amp;device=MacBook+Air&amp;amp;high-performance=true.html
Python/: DataScience.ipynb  index.py  matrix_multiplication .ipynb  new.py  numpy.ipynb  nyc_parking.csv  pandas.ipynb  python.ipynb  test.ipynb
huly.io/: download  index.html  login  pricing  robots.txt  signup
huly.io/_next/: image@url=%2F_next%2Fstatic%2Fmedia%2Fform-pattern.270a3962.jpg&w=1080&q=99  image@url=%2F_next%2Fstatic%2Fmedia%2Fhuly-social-logo.bdd703a1.png&w=256&q=75  image@url=%2F_next%2Fstatic%2Fmedia%2Fvideo-fade.8c7d3d5c.png&w=1080&q=100  image@url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fgzuai9m7%2Fproduction%2F5b23ffaa49d008fdc3dff45ac4cb5f5d4b46d246-1280x720.png%3Fw=1408&h=792&q=100&fit=max&auto=format&w=1920&q=100  (+11 more)
huly.io/blog/: about-software-engineers-and-technology-users  (+8 more)
include/: BudgetManager.hpp  Transaction.hpp  User.hpp
src/: BudgetManager.cpp  CMakeLists.txt  Transaction.cpp  User.cpp  main.cpp
test/: CMakeLists.txt  TransactionTest.cpp
testpython/: pyvenv.cfg
(+23 files in other folders)
